--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
 
-    <title>Our Airline</title>
+    <title>Sajan Rai</title>
 
     <!-- Styles -->
     <link href="{% static '/css/page.min.css' %}" rel="stylesheet">
@@ -27,7 +27,7 @@
             <div class="navbar-left">
                 <button class="navbar-toggler" type="button">&#9776;</button>
                 <a class="navbar-brand" href="#">
-                    <h1 style="color: lightslategray;">Our airline </h1>
+                    <h1 style="color: lightslategray;">Sajan Rai</h1>
 
 
 
@@ -52,14 +52,14 @@
 
 
     <!-- Header -->
-    <header class="header h-fullscreen" style="background-image: url({% static 'img/p.JPG' %})">
+    <header class="header h-fullscreen" style="background-image: url({% static 'img/new.JPG' %})">
         <div class="overlay opacity-95" style="background-image: linear-gradient(135deg, #fff 0%, #fff 40%, transparent 100%);"></div>
         <div class="container">
             <div class="row align-items-center h-100">
 
                 <div class="col-md-8 col-lg-6">
-                    <h1 class="display-4"><strong>Explore our best summer deals</strong></h1>
-                    <p class="lead-2 mt-5 mb-8">Earn 50,000 bonus miles for adventures</p>
+                    <h1 class="display-4"><strong>Hi, I am Sajan Rai</strong></h1>
+                    <p class="lead-2 mt-5 mb-8">A Python|DevOps engineer with keen interest machine learning,block chain and more.</p>
                     <p class="gap-xy">
                         <a class="btn btn-xl btn-round btn-primary mw-200" href="#">Check in</a>
                         <a class="btn btn-xl btn-round btn-outline-primary mw-200" href="#">Explore</a>
@@ -84,7 +84,7 @@
             <div class="container">
                 <header class="section-header">
 
-                    <h2>Complement your journey</h2>
+                    <h2>Tech Stacks</h2>
                     <hr>
                     <p class="lead">Explore the additional services we offer to make your journey even more memorable.</p>
                 </header>
@@ -94,24 +94,24 @@
 
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #78a300"><img src="{% static 'img/0.PNG' %}"></p>
-                            <h6 class="mb-0"><strong>Bookings</strong></h6>
+                            <p style="color: #78a300"><img src="{% static 'img/django.PNG' %}"></p>
+                            <h6 class="mb-0"><strong></strong></h6>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #eb4a62"><img src="{% static 'img/1.PNG' %}"></p>
-                            <h6 class="mb-0"><strong>Cargo</strong></h6>
+                            <p style="color: #eb4a62"><img src="{% static 'img/python.PNG' %}"></p>
+                            <h6 class="mb-0"><strong></strong></h6>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #f69a3e"><img src="{% static 'img/5.PNG' %}"></p>
-                            <h6 class="mb-0"><strong>Lounge Access</strong></h6>
+                            <p style="color: #f69a3e"><img src="{% static 'img/flask.PNG' %}"></p>
+                            <h6 class="mb-0"><strong></strong></h6>
                         </a>
                     </div>
 
@@ -132,6 +132,24 @@
                     </div>
 
 
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/9.PNG' %}"></p>
+                            <h6 class="mb-0"><strong>Car rentals</strong></h6>
+                        </a>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/9.PNG' %}"></p>
+                            <h6 class="mb-0"><strong>Car rentals</strong></h6>
+                        </a>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/9.PNG' %}"></p>
+                            <h6 class="mb-0"><strong>Car rentals</strong></h6>
+                        </a>
+                    </div>
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
                             <p style="color: #2faabc"><img src="{% static 'img/9.PNG' %}"></p>
