feat:frontend skills

--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -86,7 +86,7 @@
 
                     <h2>Tech Stacks</h2>
                     <hr>
-                    <p class="lead">Explore the additional services we offer to make your journey even more memorable.</p>
+                    <p class="lead">These are some of the Tech Stacks I employ</p>
                 </header>
 
 
@@ -94,68 +94,130 @@
 
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #78a300"><img src="{% static 'img/django.PNG' %}"></p>
-                            <h6 class="mb-0"><strong></strong></h6>
+                            <p style="color: #78a300"><img src="{% static 'img/django.PNG' %}" style="height:60px; "></p>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #eb4a62"><img src="{% static 'img/python.PNG' %}"></p>
-                            <h6 class="mb-0"><strong></strong></h6>
+                            <p style="color: #eb4a62"><img src="{% static 'img/python.PNG' %}" style="height:60px;"></p>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #f69a3e"><img src="{% static 'img/flask.PNG' %}"></p>
-                            <h6 class="mb-0"><strong></strong></h6>
+                            <p style="color: #f69a3e"><img src="{% static 'img/flask.PNG' %}"style="height:60px;"></p>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #f0c93e"><img src="{% static 'img/6.PNG' %}"></p>
-                            <h6 class="mb-0"><strong>Airport hotel</strong></h6>
+                            <p style="color: #f0c93e"><img src="{% static 'img/skss.PNG' %}" style="height:60px;"></p>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #37b8af"><img src="{% static 'img/8.PNG' %}"></p>
-                            <h6 class="mb-0"><strong>Hotel bookings</strong></h6>
+                            <p style="color: #37b8af;"><img src="{% static 'img/tfr.PNG' %}"style="height:60px;"></p>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #2faabc"><img src="{% static 'img/9.PNG' %}"></p>
-                            <h6 class="mb-0"><strong>Car rentals</strong></h6>
+                            <p style="color: #2faabc"><img src="{% static 'img/html.PNG' %}"style="height:60px;"></p>
+                            
                         </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #2faabc"><img src="{% static 'img/9.PNG' %}"></p>
-                            <h6 class="mb-0"><strong>Car rentals</strong></h6>
+                            <p style="color: #2faabc"><img src="{% static 'img/cs.PNG' %}" style="height:60px;"></p>
+                            
                         </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #2faabc"><img src="{% static 'img/9.PNG' %}"></p>
-                            <h6 class="mb-0"><strong>Car rentals</strong></h6>
+                            <p style="color: #2faabc"><img src="{% static 'img/js.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+                   
+                   <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/sql.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+
+
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/post.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/git.PNG' %}"style="height:60px;"></p>
+                            
                         </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-2">
                         <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
-                            <p style="color: #2faabc"><img src="{% static 'img/9.PNG' %}"></p>
-                            <h6 class="mb-0"><strong>Car rentals</strong></h6>
+                            <p style="color: #2faabc"><img src="{% static 'img/github.PNG' %}"style="height:60px;"></p>
+                            
                         </a>
                     </div>
+
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/docker.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/travis.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/redis.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/rabbit.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/ec2.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                            <p style="color: #2faabc"><img src="{% static 'img/light.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+
+
+
+
 
                 </div>
             </div>
