service feat partial

--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -59,7 +59,7 @@
 
                 <div class="col-md-8 col-lg-6">
                     <h1 class="display-4"><strong>Hi, I am Sajan Rai</strong></h1>
-                    <p class="lead-2 mt-5 mb-8">A Python|DevOps engineer with keen interest machine learning,block chain and more.</p>
+                    <p class="lead-2 mt-5 mb-8">A Python|DevOps engineer with keen interest in machine learning,block chain and more.</p>
                     <p class="gap-xy">
                         <a class="btn btn-xl btn-round btn-primary mw-200" href="#">Check in</a>
                         <a class="btn btn-xl btn-round btn-outline-primary mw-200" href="#">Explore</a>
@@ -229,18 +229,14 @@
       | Video
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
-        <section class="section text-white" style="background-image: url({% static 'img/A.JPG' %})" data-overlay="3">
+        <section class="section text-white" style="background-image: url({% static 'img/ne.JPG' %})" data-overlay="3">
             <div class="container">
                 <header class="section-header">
-                    <h2>Watch Video</h2>
                     <hr>
-                    <p class="lead-3">Let travel lead your imagination</p>
+                    <p class="lead-3" style="background-color: rgba(0, 0, 0, 0.5);">Greetings, everyone. I am readily available to undertake freelance projects. With many years of experience in web development and backend development, I have recently transitioned to the role of a DevOps engineer. My proficiency lies in transforming ideas and visions into meaningful and valuable products. Please do not hesitate to contact me.</p>
                 </header>
 
 
-                <div class="text-center mb-7">
-                    <a class="btn btn-xl btn-glass btn-circle btn-light" href="https://www.youtube.com/watch?v=r9vjW5ITfsw" data-provide="lightbox"><i class="fa fa-play"></i></a>
-                </div>
 
             </div>
         </section>
@@ -263,7 +259,7 @@
                     </div>
 
                     <div class="col-md-5 text-center order-md-first">
-                        <img src="{% static 'img/f.JPG' %}" alt="...">
+                        <img src="{% static 'img/web.PNG' %}" alt="...">
                     </div>
                 </div>
 
