--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -252,9 +252,8 @@
 
                 <div class="row gap-y align-items-center">
                     <div class="col-md-5 ml-auto">
-                        <h4>Take your business travel further</h4>
-                        <p>Elevate your business with a rewards programme that makes the most of your corporate travel.</p>
-                        <p>With Beyond Business by our airlines, your company can earn valuable rewards for every dollar spent, and enjoy exclusive benefits including fast track Gold and Silver status along with lounge access.</p>
+                        <h4>Web Application/Website Development</h4>
+                        <h5>I am a software developer with years of experience in both frontend and backend technologies. I provide custom web application development services that cater to the unique needs of my clients, delivering top-notch performance, security, and user experience. I work closely with clients throughout the development process to ensure their vision is realized, adhering to industry standards and best practices. My skills and experience make me a reliable partner for any web application development project, from complex  platforms to simple web applications.</h7>
 
                     </div>
 
