resful backend partially finished

--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -268,20 +268,13 @@
 
                 <div class="row gap-y align-items-center">
                     <div class="col-md-5 mr-auto">
-                        <h4>Why book online ?</h4>
-                        <p>When you book on ourairlines.com, you will have the world right at your fingertips. </p>
-                        <p>Find great fares.</p>
-                        <p>
-                            Book anytime, anywhere.
-                        </p>
-                        <p>Convenient payment options.</p>
-                        <p>
-                            Earn bonus on every booking.
-                        </p>
+                        <h4>Backend/Restful Services Development</h4>
+                        <p>As a freelance developer, I specialize in Backend/Restful Services Development. I have extensive experience in building scalable and efficient server-side applications using modern technologies and frameworks. My services include designing and implementing RESTful APIs, database integration, and deploying applications to the cloud. </p>
+                       
                     </div>
 
                     <div class="col-md-5">
-                        <img src="{% static 'img/i.JPG'%}" alt="...">
+                        <img src="{% static 'img/backend.JPG'%}" alt="...">
                     </div>
                 </div>
 
