--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -37,12 +37,11 @@
 
             <section class="navbar-mobile">
                 <nav class="nav nav-navbar ml-auto">
-                    <a class="nav-link" href="{% url 'about' %}">About us</a>
-                    <a class="nav-link" href="{% url 'flights' %}">Flights</a>
-                    <a class="nav-link" href="{% url 'addpassenger' %}">Book</a>
+                    <a class="nav-link" href="{% url 'about' %}">About Me</a>
+                
                     <a class="nav-link" href="{% url 'contact' %}">Contact</a>
-                    <a class="nav-link" href="#">profile({{ user.username }})</a>
-                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="{% url 'logout' %}">Blogs</a>
                 </nav>
             </section>
 
@@ -52,7 +51,7 @@
 
 
     <!-- Header -->
-    <header class="header h-fullscreen" style="background-image: url({% static 'img/new.JPG' %})">
+    <header class="header h-fullscreen" style="background-image: url({% static 'img/walli.JPG' %})">
         <div class="overlay opacity-95" style="background-image: linear-gradient(135deg, #fff 0%, #fff 40%, transparent 100%);"></div>
         <div class="container">
             <div class="row align-items-center h-100">
@@ -322,84 +321,17 @@
 
     <!-- Footer -->
     <footer class="footer text-white bg-img bg-fixed" style="background-image: url(../assets/img/vector/9.jpg)" data-overlay="8">
-        <div class="container py-7">
-            <div class="row gap-y">
-
-                <div class="col-6 col-md-4 col-xl-2">
-                    <h6 class="mb-4"><strong>Company</strong></h6>
-                    <div class="nav flex-column">
-                        <a class="nav-link" href="#">About us</a>
-                        <a class="nav-link" href="#">Careers</a>
-                        <a class="nav-link" href="#">Press</a>
-
-                    </div>
-                </div>
-
-                <div class="col-6 col-md-4 col-xl-2">
-                    <h6 class="mb-4"><strong>Product</strong></h6>
-                    <div class="nav flex-column">
-
-                        <a class="nav-link" href="#">Success Stories</a>
-                        <a class="nav-link" href="#">Tickect Pricing</a>
-                        <a class="nav-link" href="#">Security</a>
-                    </div>
-                </div>
-
-                <div class="col-6 col-md-4 col-xl-2">
-                    <h6 class="mb-4"><strong>Resources</strong></h6>
-                    <div class="nav flex-column">
-                        <a class="nav-link" href="#">Freebies</a>
-                        <a class="nav-link" href="#">Partners</a>
-                        <a class="nav-link" href="#">Events</a>
-                        <a class="nav-link" href="#">Assets</a>
-                    </div>
-                </div>
-
-                <div class="col-6 col-md-4 col-xl-2">
-                    <h6 class="mb-4"><strong>Community</strong></h6>
-                    <div class="nav flex-column">
-                        <a class="nav-link" href="#">Blog</a>
-                        <a class="nav-link" href="#">Forums</a>
-                        <a class="nav-link" href="#">Meetups</a>
-                        <a class="nav-link" href="#">For Investors</a>
-                    </div>
-                </div>
-
-                <div class="col-6 col-md-4 col-xl-2">
-                    <h6 class="mb-4"><strong>Support</strong></h6>
-                    <div class="nav flex-column">
-                        <a class="nav-link" href="#">Help Center</a>
-                        <a class="nav-link" href="#">Guides</a>
-                        <a class="nav-link" href="#">API</a>
-                        <a class="nav-link" href="#">FAQ</a>
-                    </div>
-                </div>
-
-                <div class="col-6 col-md-4 col-xl-2">
-                    <h6 class="mb-4"><strong>Extras</strong></h6>
-                    <div class="nav flex-column">
-                        <a class="nav-link" href="#">Podcast</a>
-
-                        <a class="nav-link" href="#">Licenses</a>
-                        <a class="nav-link" href="#">Become Affiliate</a>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <hr>
+       
 
         <div class="container">
             <div class="row gap-y">
 
                 <div class="col-md-6 text-center text-md-left">
-                    <small class="opacity-70">© 2020 our airlines. All rights reserved.</small>
+                    <p class="opacity-70">&copy; {% now "Y" %} Sajan Rai. All rights reserved</p>
                 </div>
 
                 <div class="col-md-6 text-center text-md-right">
                     <div class="social">
-                        <a class="social-facebook" href="#"><i class="fa fa-facebook"></i></a>
                         <a class="social-twitter" href="#"><i class="fa fa-twitter"></i></a>
                         <a class="social-youtube" href="#"><i class="fa fa-youtube"></i></a>
                         <a class="social-instagram" href="#"><i class="fa fa-instagram"></i></a>
