font icons of social medias

--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -58,7 +58,7 @@
 
                 <div class="col-md-8 col-lg-6">
                     <h1 class="display-4"><strong>Hi, I am Sajan Rai</strong></h1>
-                    <p class="lead-2 mt-5 mb-8">A Python|DevOps engineer with keen interest in machine learning,block chain and more.</p>
+                    <p class="lead-2 mt-5 mb-8">A Python|DevOps engineer with keen interest in backends,machine learning,block chain and more.</p>
                     <p class="gap-xy">
                         <a class="btn btn-xl btn-round btn-primary mw-200" href="#">Check in</a>
                         <a class="btn btn-xl btn-round btn-outline-primary mw-200" href="#">Explore</a>
@@ -287,14 +287,31 @@
       | Signup
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
-        <section class="section bg-gray">
-            <div class="container">
+        <div class="container">
 
-                <h3 class="text-center fw-200"><strong>Join</strong> Our proud partners</h3>
+          <h3 class="text-center fw-200"><strong>Join</strong> thousands of companies that use TheSaaS</h3>
 
-
+          <form class="row gap-y mt-7">
+            <div class="col-md-6 col-lg-3">
+              <input type="text" class="form-control" placeholder="Name">
             </div>
-        </section>
+
+            <div class="col-md-6 col-lg-3">
+              <input type="text" class="form-control" placeholder="Email">
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+              <input type="password" class="form-control" placeholder="Password">
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+              <button class="btn btn-block btn-success h-100">Get Started</button>
+            </div>
+          </form>
+
+        </div>
+      </section>
+        
 
 
         <!--
@@ -327,14 +344,16 @@
             <div class="row gap-y">
 
                 <div class="col-md-6 text-center text-md-left">
-                    <p class="opacity-70">&copy; {% now "Y" %} Sajan Rai. All rights reserved</p>
+                    <p class="opacity-70">&copy; {% now "Y" %} Sajan Rai. All rights reserved.</p>
                 </div>
 
                 <div class="col-md-6 text-center text-md-right">
                     <div class="social">
-                        <a class="social-twitter" href="#"><i class="fa fa-twitter"></i></a>
-                        <a class="social-youtube" href="#"><i class="fa fa-youtube"></i></a>
-                        <a class="social-instagram" href="#"><i class="fa fa-instagram"></i></a>
+                        <a class="social-github" href="https://github.com/Sajan4072"><i class="fa fa-github"></i></a>
+                        <a class="social-linkedin" href="https://www.linkedin.com/in/sajan-rai-4a40b9171/"><i class="fa fa-linkedin"></i></a>
+                        <a class="social-twitter" href="https://twitter.com/SajanRa35670399"><i class="fa fa-twitter"></i></a>
+                        
+                        
                     </div>
                 </div>
 
