--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -26,7 +26,7 @@
 
             <div class="navbar-left">
                 <button class="navbar-toggler" type="button">&#9776;</button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="#sajan">
                     <h1 style="color: lightslategray;">Sajan Rai</h1>
 
 
@@ -37,10 +37,10 @@
 
             <section class="navbar-mobile">
                 <nav class="nav nav-navbar ml-auto">
-                    <a class="nav-link" href="#">About Me</a>
+                    <a class="nav-link" href="#about">About Me</a>
                 
-                    <a class="nav-link" href="#">Contact</a>
-                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="#contact">Resume</a>
                     <a class="nav-link" href="#">Blogs</a>
                 </nav>
             </section>
@@ -49,9 +49,11 @@
     </nav>
     <!-- /.navbar -->
 
+    
+
 
     <!-- Header -->
-    <header class="header h-fullscreen" style="background-image: url({% static 'img/walli.JPG' %})">
+    <header class="header h-fullscreen" style="background-image: url({% static 'img/walli.JPG' %})" id=sajan>
         <div class="overlay opacity-95" style="background-image: linear-gradient(135deg, #fff 0%, #fff 40%, transparent 100%);"></div>
         <div class="container">
             <div class="row align-items-center h-100">
@@ -60,8 +62,8 @@
                     <h1 class="display-4"><strong>Hi, I am Sajan Rai</strong></h1>
                     <p class="lead-2 mt-5 mb-8">A Python|DevOps engineer with keen interest in backends,machine learning,block chain and more.</p>
                     <p class="gap-xy">
-                        <a class="btn btn-xl btn-round btn-primary mw-200" href="#">Check in</a>
-                        <a class="btn btn-xl btn-round btn-outline-primary mw-200" href="#">Explore</a>
+                        <a class="btn btn-xl btn-round btn-primary mw-200" href="#contact">Hire Me</a>
+                        <a class="btn btn-xl btn-round btn-outline-primary mw-200" href="#explore">Explore</a>
                     </p>
                 </div>
 
@@ -228,7 +230,7 @@
       | Video
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
-        <section class="section text-white" style="background-image: url({% static 'img/ne.JPG' %})" data-overlay="3">
+        <section class="section text-white" style="background-image: url({% static 'img/ne.JPG' %})" data-overlay="3" id="about">
             <div class="container">
                 <header class="section-header">
                     <hr>
@@ -246,7 +248,7 @@
       | Features
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
-        <section class="section">
+        <section class="section" id="explore">
             <div class="container">
 
                 <div class="row gap-y align-items-center">
@@ -287,24 +289,33 @@
       | Signup
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
-        <div class="container" style="margin-bottom: 60px;">
+        <div class="container" style="margin-bottom: 60px;" id="contact">
 
           <h3 class="text-center fw-200"><strong>Get in Touch </strong><br>I am open to taking on freelance work, provided the project is a good fit for me.
           </h3>
-
+           
+           <!-- {% if message %}
+            <div class="alert alert-{{ status }} alert-dismissible fade show" role="alert">
+                <strong>{{ status }}!</strong>. {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+          {% endif %}
+ -->
           <form class="row gap-y mt-7" action="{% url 'save_message' %}" method="POST">
             {% csrf_token %}
             <div class="col-md-6 col-lg-2">
-              <input type="text" class="form-control" placeholder="Name" name="name">
+              <input type="text" class="form-control" placeholder="Name" name="name" required>
             </div>
 
             <div class="col-md-6 col-lg-3">
-              <input type="email" class="form-control" placeholder="Email" name="email">
+              <input type="email" class="form-control" placeholder="Email" name="email" required>
             </div>
 
             <div class="col-md-9 col-lg-4">
-              <!-- <input type="text" class="form-control" placeholder="Message" name=message> -->
-              <textarea class="form-control" name="message" rows="4" placeholder="Message"></textarea>
+              
+              <textarea class="form-control" name="message" rows="4" placeholder="Message" required></textarea>
             </div>
 
             <div class="col-md-6 col-lg-3" style="height:76px;">
