--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -53,7 +53,7 @@
 
 
     <!-- Header -->
-    <header class="header h-fullscreen" style="background-image: url({% static 'img/walli.JPG' %})" id=sajan>
+    <header class="header h-fullscreen" style="background-image: url({% static 'img/walli.JPG' %}); background-size:contain; background-position: center;" id=sajan>
         <div class="overlay opacity-95" style="background-image: linear-gradient(135deg, #fff 0%, #fff 40%, transparent 100%);"></div>
         <div class="container">
             <div class="row align-items-center h-100">
