target=blank update

--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -41,7 +41,7 @@
                 
                     <a class="nav-link" href="#contact">Contact</a>
                     <a class="nav-link" href="#contact">Resume</a>
-                    <a class="nav-link" href="#">Blogs</a>
+                    <a class="nav-link" href="https://medium.com/@rai4072" target="_blank">Blogs</a>
                 </nav>
             </section>
 
@@ -363,9 +363,9 @@
 
                 <div class="col-md-6 text-center text-md-right">
                     <div class="social">
-                        <a class="social-github" href="https://github.com/Sajan4072"><i class="fa fa-github"></i></a>
-                        <a class="social-linkedin" href="https://www.linkedin.com/in/sajan-rai-4a40b9171/"><i class="fa fa-linkedin"></i></a>
-                        <a class="social-twitter" href="https://twitter.com/SajanRa35670399"><i class="fa fa-twitter"></i></a>
+                        <a class="social-github" href="https://github.com/Sajan4072" target="_blank"><i class="fa fa-github"></i></a>
+                        <a class="social-linkedin" href="https://www.linkedin.com/in/sajan-rai-4a40b9171/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a class="social-twitter" href="https://twitter.com/SajanRa35670399" target="_blank"><i class="fa fa-twitter"></i></a>
                         
                         
                     </div>
