fa icons increased

--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -363,9 +363,9 @@
 
                 <div class="col-md-6 text-center text-md-right">
                     <div class="social">
-                        <a class="social-github" href="https://github.com/Sajan4072" target="_blank"><i class="fa fa-github"></i></a>
-                        <a class="social-linkedin" href="https://www.linkedin.com/in/sajan-rai-4a40b9171/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                        <a class="social-twitter" href="https://twitter.com/SajanRa35670399" target="_blank"><i class="fa fa-twitter"></i></a>
+                        <a class="social-github" href="https://github.com/Sajan4072" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+                        <a class="social-linkedin" href="https://www.linkedin.com/in/sajan-rai-4a40b9171/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+                        <a class="social-twitter" href="https://twitter.com/SajanRa35670399" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
                         
                         
                     </div>
