--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -94,61 +94,61 @@
                 <div class="row gap-y">
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://www.djangoproject.com/" target="_blank">
                             <p style="color: #78a300"><img src="{% static 'img/django.PNG' %}" style="height:60px; "></p>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://www.python.org/" target="_blank">
                             <p style="color: #eb4a62"><img src="{% static 'img/python.PNG' %}" style="height:60px;"></p>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://flask.palletsprojects.com/en/2.3.x/" target="_blank">
                             <p style="color: #f69a3e"><img src="{% static 'img/flask.PNG' %}"style="height:60px;"></p>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://scikit-learn.org/stable/" target="_blank">
                             <p style="color: #f0c93e"><img src="{% static 'img/skss.PNG' %}" style="height:60px;"></p>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://www.tensorflow.org/" target="_blank">
                             <p style="color: #37b8af;"><img src="{% static 'img/tfr.PNG' %}"style="height:60px;"></p>
                         </a>
                     </div>
 
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://html5.org/" target="_blank">
                             <p style="color: #2faabc"><img src="{% static 'img/html.PNG' %}"style="height:60px;"></p>
                             
                         </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank">
                             <p style="color: #2faabc"><img src="{% static 'img/cs.PNG' %}" style="height:60px;"></p>
                             
                         </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://js.org/" target="_blank">
                             <p style="color: #2faabc"><img src="{% static 'img/js.PNG' %}"style="height:60px;"></p>
                             
                         </a>
                     </div>
                    
                    <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://www.mysql.com/" target="_blank">
                             <p style="color: #2faabc"><img src="{% static 'img/sql.PNG' %}"style="height:60px;"></p>
                             
                         </a>
@@ -156,61 +156,63 @@
 
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://www.postgresql.org/" target="_blank
+                        ">
                             <p style="color: #2faabc"><img src="{% static 'img/post.PNG' %}"style="height:60px;"></p>
                             
                         </a>
                     </div>
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://git-scm.com/" target="_blank">
                             <p style="color: #2faabc"><img src="{% static 'img/git.PNG' %}"style="height:60px;"></p>
                             
                         </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://github.com/" target="_blank">
                             <p style="color: #2faabc"><img src="{% static 'img/github.PNG' %}"style="height:60px;"></p>
                             
                         </a>
                     </div>
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://www.docker.com/" target="_blank">
                             <p style="color: #2faabc"><img src="{% static 'img/docker.PNG' %}"style="height:60px;"></p>
                             
                         </a>
                     </div>
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://www.travis-ci.com/" target="_blank">
                             <p style="color: #2faabc"><img src="{% static 'img/travis.PNG' %}"style="height:60px;"></p>
                             
                         </a>
                     </div>
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://redis.io/" target="_blank">
                             <p style="color: #2faabc"><img src="{% static 'img/redis.PNG' %}"style="height:60px;"></p>
                             
                         </a>
                     </div>
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://www.rabbitmq.com/" target="_blank">
                             <p style="color: #2faabc"><img src="{% static 'img/rabbit.PNG' %}"style="height:60px;"></p>
                             
                         </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://docs.aws.amazon.com/ec2/index.html" target="style">
                             <p style="color: #2faabc"><img src="{% static 'img/ec2.PNG' %}"style="height:60px;"></p>
                             
                         </a>
                     </div>
 
                     <div class="col-6 col-md-4 col-xl-2">
-                        <a class="card card-body border hover-shadow-6 text-center py-6" href="#">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://docs.aws.amazon.com/lightsail/index.html"
+                        target="_blank">
                             <p style="color: #2faabc"><img src="{% static 'img/light.PNG' %}"style="height:60px;"></p>
                             
                         </a>
