some changes made

--- a/bookmyflight/flights/templates/flights/landing.html
+++ b/bookmyflight/flights/templates/flights/landing.html
@@ -60,9 +60,9 @@
 
                 <div class="col-md-8 col-lg-6">
                     <h1 class="display-4"><strong>Hi, I am Sajan Rai</strong></h1>
-                    <p class="lead-2 mt-5 mb-8">A Python|DevOps engineer with keen interest in backends,machine learning,block chain and more.</p>
+                    <p class="lead-2 mt-5 mb-8">A Software engineer with keen interest and proficiency in Backends,Microservices,Devops and more.</p>
                     <p class="gap-xy">
-                        <a class="btn btn-xl btn-round btn-primary mw-200" href="#contact">Hire Me</a>
+                        <a class="btn btn-xl btn-round btn-primary mw-200" href="#contact">Resume</a>
                         <a class="btn btn-xl btn-round btn-outline-primary mw-200" href="#explore">Explore</a>
                     </p>
                 </div>
@@ -81,7 +81,7 @@
       | Products
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
-        <section class="section">
+        <section class="section" id="explore">
             <div class="container">
                 <header class="section-header">
 
@@ -218,6 +218,59 @@
                         </a>
                     </div>
 
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://docs.aws.amazon.com/lightsail/index.html"
+                        target="_blank">
+                            <p style="color: #2faabc"><img src="{% static 'img/selenium.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+                    
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://docs.aws.amazon.com/lightsail/index.html"
+                        target="_blank">
+                            <p style="color: #2faabc"><img src="{% static 'img/terraform.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+                    
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://docs.aws.amazon.com/lightsail/index.html"
+                        target="_blank">
+                            <p style="color: #2faabc"><img src="{% static 'img/kube.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+                      
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://docs.aws.amazon.com/lightsail/index.html"
+                        target="_blank">
+                            <p style="color: #2faabc"><img src="{% static 'img/aws.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://docs.aws.amazon.com/lightsail/index.html"
+                        target="_blank">
+                            <p style="color: #2faabc"><img src="{% static 'img/jenkins.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-xl-2">
+                        <a class="card card-body border hover-shadow-6 text-center py-6" href="https://docs.aws.amazon.com/lightsail/index.html"
+                        target="_blank">
+                            <p style="color: #2faabc"><img src="{% static 'img/ansible.PNG' %}"style="height:60px;"></p>
+                            
+                        </a>
+                    </div>
+
+
+
+
+
+
 
 
 
@@ -236,7 +289,13 @@
             <div class="container">
                 <header class="section-header">
                     <hr>
-                    <p class="lead-3" style="background-color: rgba(0, 0, 0, 0.5);">Greetings, everyone. I am readily available to undertake freelance projects. With many years of experience in web development and backend development, I have recently transitioned to the role of a DevOps engineer. My proficiency lies in transforming ideas and visions into meaningful and valuable products. Please do not hesitate to contact me.</p>
+                    <p class="lead-3" style="background-color: rgba(0, 0, 0, 0.5); text-align: left;">Hello!, I'm Sajan Rai, a software engineer living in Toronto,Onatrio.<br><br>
+                    I have experience with various backend technological stacks and practices and I currently work primarily on Django and Devops projects to build scalable backend solutions.<br><br>
+
+                    Get to know about me more on my <a href="https://www.linkedin.com/in/sajan-rai-4a40b9171/" target="_blank" style="color: blue;"><b>Linkedin</b></a> or my <a href="https://github.com/Sajan4072" target="_blank" style="color: blue;"><b>Github</b></a><br><br>
+
+                    I am currently pursuing my PostGraduate Degree in Cloud Computing ,I've worked previously at <a href="https://www.susankya.com/" target="_blank" style="color: blue;"><b>Susankya Global LLC</b></a>, <a href="https://www.uxlsoft.com/" target="_blank" style="color: blue;"><b>UniAxial Softwares</b></a>, <a href="https://www.techup.com.np/" target="_blank" style="color: blue;"><b>TechUp Pvt Ltd</b></a>, and more.
+                    </p>
                 </header>
 
 
@@ -250,18 +309,25 @@
       | Features
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
-        <section class="section" id="explore">
+        <section class="section" >
             <div class="container">
 
                 <div class="row gap-y align-items-center">
                     <div class="col-md-5 ml-auto">
-                        <h4>Web Application/Website Development</h4>
-                        <h5>I am a software developer with years of experience in both frontend and backend technologies. I provide custom web application development services that cater to the unique needs of my clients, delivering top-notch performance, security, and user experience. I work closely with clients throughout the development process to ensure their vision is realized, adhering to industry standards and best practices. My skills and experience make me a reliable partner for any web application development project, from complex  platforms to simple web applications.</h7>
+                        <h4>Backend Development</h4>
+                        <h5>I am a software developer with years of experience in both frontend and backend technologies.My proficiency extends to <br>
+                        <ul>
+                        <li>Backend & API Development(Microservices):I have worked in the development of projects like Real Time Dashboards,CMS, Plugins, PWA, TopUp payment gateways, Restful/GraphQL API development and 3rd party API integration and more.</li>
+                        <li>Databases and Data Modeling: Proficiency in different relational and NoSQL databases, ORMs and understanding of database design, normalization, and indexing.
+                        </li>
+                        <li>Knowledge of Web servers like Apache and Nginx and scalability tools like Redis and RabbitMQ.</li>
+                        </ul>
+                        </h7>
 
                     </div>
 
                     <div class="col-md-5 text-center order-md-first">
-                        <img src="{% static 'img/web.PNG' %}" alt="...">
+                        <img src="{% static 'img/backend.JPG' %}" alt="...">
                     </div>
                 </div>
 
@@ -271,13 +337,22 @@
 
                 <div class="row gap-y align-items-center">
                     <div class="col-md-5 mr-auto">
-                        <h4>Backend/Restful Services Development</h4>
-                        <p>As a freelance developer, I specialize in Backend/Restful Services Development. I have extensive experience in building scalable and efficient server-side applications using modern technologies and frameworks. My services include designing and implementing RESTful APIs, database integration, and deploying applications to the cloud. </p>
+                        <h4>DevOps</h4>
+                        <p>Recently I have also transitioned to devops engineering roles with the following proficiency
+
+                        <ul>
+                        <li>CI/CD:I have experience in setting up CI/CD pipelines using tools like Jenkins, Github Actions,knowledge of build automation, automated testing, and deployment strategies.</li>
+                        <li>Infrastructure as Code (IaC):Tools like Terraform, AWS CloudFormation,for provisioning and managing infrastructure along with configuration management tools such as Ansible.
+                        </li>
+                        <li>Containerization and Orchestration:I have fair amount of experience in working with Docker ,Kubernetes, Docker Swarm.</li>
+                        <li>Cloud Platforms:Understanding of cloud services likeAmazon EC2, Amazon S3, Amazon RDS, , AWS Lambda, Amazon CloudWatch, Amazon ECS, Amazon Glue, Amazon Sagemaker and more.</li>
+
+                        </p>
                        
                     </div>
 
                     <div class="col-md-5">
-                        <img src="{% static 'img/backend.JPG'%}" alt="...">
+                        <img src="{% static 'img/Devops.JPG'%}" alt="...">
                     </div>
                 </div>
 
@@ -293,7 +368,7 @@
       !-->
         <div class="container" style="margin-bottom: 60px;" id="contact">
 
-          <h3 class="text-center fw-200"><strong>Get in Touch </strong><br>I am open to taking on freelance work, provided the project is a good fit for me.
+          <h3 class="text-center fw-200"><strong>Get in Touch </strong><br>Eager to contribute my skills and passion for innovation to dynamic teams and projects.
           </h3>
            
            <!-- {% if message %}
